--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,25 @@ jobs:
 
       # run tests!
       - run: yarn test
+  deploy:
+    machine:
+      enabled: true
+    steps:
+      - run:
+          name: deploy over SSH
+          command: |
+             echo "all looks good"
+                  #            ssh deployment@3.213.165.5 'cd ~/node.js.test && git pull && pm2 restart app.js'
+            #workflows:
+            #  version: 2
+            #  build-and-deploy:
+            #    jobs:
+            #      - build
+        #      - deploy:
+              #          requires:
+                  #            - build
+              #          filters:
+                  #            branches:
+                    #              only: master
+
+                              
