--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           name: deploy over SSH
           command: |
              echo "all looks good"
-                  #            ssh deployment@3.213.165.5 'cd ~/node.js.test && git pull && pm2 restart app.js'
+                   ssh root@54.188.36.123'cd ~/node.js.test && git pull && pm2 restart app.js'
             #workflows:
             #  version: 2
             #  build-and-deploy:
