--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,16 +43,16 @@ jobs:
           name: deploy over SSH
           command: |
                  ssh root@54.188.36.123 'cd ~/node.js.test && git pull && pm2 restart app.js'
-            #workflows:
-            #  version: 2
-            #  build-and-deploy:
-            #    jobs:
-            #      - build
-        #      - deploy:
-              #          requires:
-                  #            - build
-              #          filters:
-                  #            branches:
-                    #              only: master
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
 
                               
