--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,19 @@ jobs:
       - run: yarn test
       
   deploy:
-    machine:
-      enabled: true
-    steps:
+   steps:
       - run:
           name: Deploy Over SSH
           command: |
             ssh deployment@3.213.165.5 'cd ~/node.js.test && git pull && pm2 restart app.js'
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
