--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,12 +38,11 @@ jobs:
   deploy:
     machine:
       enabled: true
-    working_directory: ~/node.js.test
     steps:
       - run:
           name: Deploy Over SSH
           command: |
-            ssh deployment@3.213.165.5 'git pull && pm2 restart app.js'
+            ssh deployment@3.213.165.5 'cd ~/node.js.test && git pull && pm2 restart app.js'
 workflows:
   version: 2
   build-and-deploy:
